2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Removed the frame around the statusEntry.

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Presence.cs: Added text for Presence types
	* Banter/Person.cs: Added a SetStatus to update the presence.Message
	* Banter/ChatWindow.cs: Added ability to set presence messages using
	  /status in chat window
	* Banter/GroupWindow.cs: Added Entry to set status
	* Banter/ProviderUser.cs: Added ability to set status on a connection

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Updated the IsSelf to be IsMe in Person and it
	  works now
	* Banter/PersonManager.cs: Updated the Me property so it will find the
	  Person object that is me and cache it off

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Conversation.cs: Changed GetReceivedMessages() so it doesn't
	  return null.  Just return a blank array if there are no messages

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/PersonGroup.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/ChatWindow.cs, Banter/PersonStore.cs,
	  Banter/GroupWindow.cs, Banter/PersonManager.cs,
	  Banter/PersonSync.cs, Banter/Makefile.am: Renamed PersonStore to
	  PersonManager
	* Banter/ProviderUserManager.cs: Moved the GetMe call to a Me property

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs, Banter/Conversation.cs: Added code to retrieve
	  pending messages when receiving a chat start

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUserManager.cs: Added a static method to get all
	  ProviderUser objects which are flagged as me

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Removed all references to Tapioca
	* Banter/Conversation.cs: Removed reference to TapiocaConnection

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Commented out DisconnectHandlers() temporarily. 